lab1/Test/L1-A-10-82.output
Error Type B at Line 1
Error Type A at Line 7
Error Type B at Line 8
Error Type B at Line 21
Error Type B at Line 27
Error Type B at Line 29
